--- a/AIDLdemo/SimpleJarService/res/values/styles.xml
+++ b/AIDLdemo/SimpleJarService/res/values/styles.xml
@@ -16,5 +16,11 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <style name="shadowStyle">
+        <item name="android:shadowColor">#bf000000</item>
+        <item name="android:shadowDx">0.0</item>
+        <item name="android:shadowDy">2.0</item>
+        <item name="android:shadowRadius">2.0</item>
+    </style>
 
 </resources>
