JNI访问JAVA中的成员及方法
主要是获取Java中定义的成功变量并且设置其值，调用Java中的非native方法

--- a/HelloJNI/res/layout/activity_main.xml
+++ b/HelloJNI/res/layout/activity_main.xml
@@ -13,5 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+    <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="jniTest"
+        android:text="@string/action_jni"/>
 
 </RelativeLayout>
